--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "The path to becoming a DataScientist"
+author: "TechDataMan"
+description: "Today, everyone is talking about artificial intelligence and machine learning, but what exactly are they? As an engineer, I have chosen to be a lifelong learner and to embrace new technologies and apply them to specific problems. Here I show my way of approaching this current and complex topic and my first experiences in the application of artificial intelligence." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
+#email: "example@mail.com"
+#twitter_username: "twitteruser"
+github_username: "TechDataMan"
+#linkedin_username: "linkedinuser"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
