--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "DataSciene Blog"
+title: "DataScience Blog"
 author: "TechDataMan"
 # description: "Today, everyone is talking about artificial intelligence and machine learning, but what exactly are they? As an engineer, I have chosen to be a lifelong learner and to embrace new technologies and apply them to specific problems. Here I show my way of approaching this current and complex topic and my first experiences in the application of artificial intelligence." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
