--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ author: "TechDataMan"
 # All of these are optional and can be removed or commented out
 #email: "example@mail.com"
 #twitter_username: "twitteruser"
-github_username: "TechDataMan"
+#github_username: "TechDataMan"
 #linkedin_username: "linkedinuser"
 #facebook_username: username
 #flickr_username: username
